<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:background="@color/white_pallete"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_pallete"
        android:textColor="@color/white_pallete"
        android:text="@string/sign_in_tittle"
        android:textAlignment="center"
        android:textSize="34sp" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:src="@drawable/aerind" />

    <TextView
        android:id="@+id/textViewCheckInOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username" />

    <EditText
        android:id="@+id/input_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/username_hint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textSize="14sp" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button_text" />

</LinearLayout>