<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="@color/white_pallete"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_pallete"
        android:textColor="@color/white_pallete"
        android:text="@string/find_hotel_title"
        android:textAlignment="center"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textViewCheckInOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/tittle"
        android:layout_marginTop="50dp"
        android:text="@string/checkiinout_title"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonCheckIn"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/textViewCheckInOut"
        android:layout_marginTop="30dp"
        android:onClick="showCheckInDatePickerDialog"
        android:text="@string/check_in_date_button_text" />

    <Button
        android:id="@+id/buttonCheckOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/buttonCheckIn"
        android:layout_alignTop="@id/textViewCheckInOut"
        android:layout_marginStart="237dp"
        android:layout_marginTop="30dp"
        android:onClick="showCheckOutDatePickerDialog"
        android:text="@string/check_out_date_button_text" />

    <TextView
        android:id="@+id/textViewSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/buttonCheckIn"
        android:layout_marginTop="55dp"
        android:text="@string/number_of_rooms_title"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinner_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/textViewSpinner"
        android:layout_alignTop="@id/buttonCheckOut"
        android:layout_marginStart="237dp"
        android:layout_marginTop="55dp"
        android:minHeight="27dp"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="401dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/tittle"
        android:layout_alignParentStart="true"
        android:layout_marginTop="225dp"
        android:text="@string/search_button_text" />

</RelativeLayout>