<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="@color/white_pallete"
    tools:context=".FourthActivity">

    <TextView
        android:id="@+id/tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_pallete"
        android:textColor="@color/white_pallete"
        android:text="@string/hotel_details_title"
        android:textAlignment="center"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/namaHotel4th"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/tittle"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="1dp"
        android:text="@string/nama_hotel"
        android:textAlignment="center"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/gambarHotel4th"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignTop="@id/namaHotel4th"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="0dp"
        android:textAlignment="gravity"
        app:srcCompat="@drawable/capella_bangkok" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@id/gambarHotel4th"
        android:background="@color/grey_pallete"
        android:layout_marginTop="209dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deskripsi_hotel"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/deskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/fasilitas_hotel"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fasilitas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/harga_hotel"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>